# aida

./: .env.example  .gitignore  AGENTS.md  ENTREGA_AIDA.md  README.md  export_project.py  pyproject.toml  run_tunnel.py
data/output/: response_189ad75a-0ca2-e165-414a-381db2a09ca2_20260503_150423.txt
scratch/: available_models.txt  check_db.py  check_pdf_content.py  find_text.py  list_models.py  test_rag_soivre.py
src/aida/: main.py
src/aida/application/: orchestrator.py
src/aida/domain/: models.py
src/aida/infrastructure/adapters/: azure_ocr_adapter.py  azure_voice_adapter.py  gemini_adapter.py
src/aida/infrastructure/api/: main.py
src/aida/infrastructure/database/: duckdb_repository.py  ingest_manual.py
tests/: test_ocr.py  test_orchestrator.py  test_voice.py  test_webhook_voice.py
