[project]
name = "aida"
version = "0.1.0"
description = "Asistente Inteligente de Despacho Aduanero"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-formrecognizer>=3.3.3",
    "duckdb>=1.5.2",
    "fastapi>=0.136.1",
    "google-cloud-dialogflow>=2.47.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
